--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-	"name": "ExampleApp",
+	"name": "z0rk-rnw",
 	"version": "0.0.1",
-	"private": true,
+	"private": false,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest",
+		"android-list": "emulator -list-avds",
+		"android-pixelXL": "emulator @PixelXL",
+		"android": "react-native run-android",
+		"ios": "react-native run-ios",
 		"web:build:vendor-dev": "rm -rf web/vendor-dev; NODE_ENV=development webpack --config web/vendor.webpack.config.js || rm -rf web/vendor-dev",
 		"web": "[ -d web/vendor-dev ] || npm run web:build:vendor-dev && NODE_ENV=development webpack-dev-server -d --host 0.0.0.0 --port 3000 --config web/webpack.config.js --inline --hot --colors",
 		"web:clean": "rm -rf web/vendor web/vendor-dev web/build",
@@ -14,6 +18,7 @@
 		"web:serve": "http-serve -p 3001 --gzip true ./web/build"
 	},
 	"dependencies": {
+		"lodash": "^4.17.4",
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.43.4",
 		"react-native-web": "^0.0.88"
