--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-"presets": ["react-native"]
+  "plugins": [
+    "react-native-web/babel"
+  ],
+  "presets": [
+    "flow",
+    "react-native"
+  ]
 }
