--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
 	"name": "z0rk-rnw",
 	"version": "0.0.1",
 	"private": false,
+	"license": "MIT",
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest",
+		"flow": "flow status",
 		"android-list": "emulator -list-avds",
-		"android-pixelXL": "emulator @PixelXL",
+		"android-pixelXL": "emulator @Pixel-XL-API-24",
 		"android": "react-native run-android",
 		"ios": "react-native run-ios",
 		"web:build:vendor-dev": "rm -rf web/vendor-dev; NODE_ENV=development webpack --config web/vendor.webpack.config.js || rm -rf web/vendor-dev",
@@ -18,29 +20,33 @@
 		"web:serve": "http-serve -p 3001 --gzip true ./web/build"
 	},
 	"dependencies": {
-		"lodash": "^4.17.4",
-		"react": "16.0.0-alpha.6",
-		"react-native": "0.43.4",
-		"react-native-web": "^0.0.88"
+		"react": "^16.1.1",
+		"react-dom": "^16.1.1",
+		"react-native": "^0.60.5",
+		"react-native-web": "^0.1.14"
 	},
 	"devDependencies": {
 		"add-asset-html-webpack-plugin": "^2.0.1",
-		"babel-jest": "19.0.0",
+		"babel-cli": "^6.26.0",
+		"babel-jest": "^21.2.0",
 		"babel-loader": "^7.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"compression-webpack-plugin": "^0.4.0",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-flow": "^6.23.0",
+		"babel-preset-react-native": "^4.0.0",
+		"compression-webpack-plugin": "^1.0.1",
 		"copy-webpack-plugin": "^4.0.1",
+		"flow-bin": "^0.59.0",
 		"html-webpack-plugin": "^2.28.0",
 		"http-serve": "^1.0.1",
-		"jest": "19.0.2",
+		"jest": "^21.2.1",
 		"json-loader": "^0.5.4",
+		"lodash": "^4.17.15",
 		"offline-plugin": "^4.7.0",
-		"react-dom": "^15.4.2",
-		"react-hot-loader": "^1.3.1",
-		"react-test-renderer": "16.0.0-alpha.6",
-		"url-loader": "^0.5.8",
-		"webpack": "^2.4.1",
-		"webpack-dev-server": "^2.4.2"
+		"react-hot-loader": "^3.1.3",
+		"react-test-renderer": "^16.1.1",
+		"url-loader": "^0.6.2",
+		"webpack": "^3.8.1",
+		"webpack-dev-server": "^2.9.4"
 	},
 	"jest": {
 		"preset": "react-native",
